extends Control

# ==========================================
# ðŸ¦† Duckov Mod Inspector v1.6 (UI Card Update)
# ==========================================

const MAX_FILE_SIZE = 20 * 1024 * 1024 # 20MB é™åˆ¶
var is_scanning = false # ðŸ”’ æ‰«æé”

# ðŸ“Œ å¼•ç”¨å¡ç‰‡é¢„åˆ¶ä½“ (è¯·ç¡®ä¿è·¯å¾„æ­£ç¡®)
var card_scene = preload("res://FileResultCard.tscn")

# ðŸ“Œ èŠ‚ç‚¹å¼•ç”¨
@onready var status_label = $StatusLabel
# æ³¨æ„ï¼šè¿™é‡ŒçŽ°åœ¨å¼•ç”¨çš„æ˜¯ VBoxContainerï¼Œä¸æ˜¯åŽŸæ¥çš„ RichTextLabel
@onready var result_list = $ResultScroll/ResultList 

# === 1. æ ¸å¿ƒå®šä¹‰: é£Žé™©ç­‰çº§ ===
enum RiskLevel { INFO, WARNING, DANGER, CRITICAL }

# === 2. é€šç”¨æƒé™è§„åˆ™åº“ (Permission Rules) ===
var permission_rules = {
	# ðŸŒ ç½‘ç»œé€šä¿¡
	"Network": {
		"System\\.Net": [RiskLevel.INFO, "åŸºç¡€ç½‘ç»œåº“å¼•ç”¨"],
		"HttpClient": [RiskLevel.WARNING, "å…·å¤‡ HTTP è”ç½‘è¯·æ±‚èƒ½åŠ›"],
		"UnityWebRequest": [RiskLevel.WARNING, "Unity å¼•æ“Žè”ç½‘æŽ¥å£"],
		"Socket": [RiskLevel.WARNING, "Socket é•¿è¿žæŽ¥ (èŠå¤©/P2P)"],
		"WebClient": [RiskLevel.WARNING, "è€å¼ç½‘ç»œå®¢æˆ·ç«¯"],
		"UploadData": [RiskLevel.DANGER, "ä¸Šä¼ æ•°æ®æŽ¥å£"],
		"UploadString": [RiskLevel.DANGER, "ä¸Šä¼ æ–‡æœ¬æŽ¥å£"],
		"discord\\.com": [RiskLevel.DANGER, "ç¡¬ç¼–ç  Discord é“¾æŽ¥ (ç–‘ä¼¼ Webhook)"],
		"iplogger": [RiskLevel.CRITICAL, "åŒ…å« IP è¿½è¸ªé“¾æŽ¥"]
	},

	# ðŸ“‚ æ–‡ä»¶ç³»ç»Ÿ
	"FileSystem": {
		"System\\.IO": [RiskLevel.INFO, "åŸºç¡€æ–‡ä»¶æ“ä½œåº“"],
		"File\\.Delete": [RiskLevel.DANGER, "å…·å¤‡åˆ é™¤æ–‡ä»¶èƒ½åŠ›"],
		"Directory\\.Delete": [RiskLevel.DANGER, "å…·å¤‡åˆ é™¤æ–‡ä»¶å¤¹èƒ½åŠ›"],
		"GetFiles": [RiskLevel.WARNING, "éåŽ†æ–‡ä»¶åˆ—è¡¨"],
		"PlayerPrefs": [RiskLevel.INFO, "è¯»å†™æ¸¸æˆæ³¨å†Œè¡¨/é…ç½®"],
		"Environment\\.GetFolderPath": [RiskLevel.WARNING, "èŽ·å–ç³»ç»Ÿæ•æ„Ÿè·¯å¾„ (å¦‚æ–‡æ¡£/æ¡Œé¢)"]
	},

	# âš™ï¸ ç³»ç»Ÿ/è¿›ç¨‹
	"System": {
		"Process\\.Start": [RiskLevel.DANGER, "å¯åŠ¨å¤–éƒ¨è¿›ç¨‹ (CMD/EXE)"],
		"Environment\\.Exit": [RiskLevel.CRITICAL, "å¼ºåˆ¶æ€è¿›ç¨‹/é€€å‡ºæ¸¸æˆ"],
		"RegistryKey": [RiskLevel.DANGER, "æ“ä½œ Windows æ³¨å†Œè¡¨"],
		"Quit": [RiskLevel.WARNING, "è°ƒç”¨é€€å‡ºé€»è¾‘ (Application.Quit)"]
	},

	# ðŸŽ­ åŠ¨æ€æ‰§è¡Œ/éšè—
	"Reflection": {
		"System\\.Reflection": [RiskLevel.INFO, "å¼•ç”¨åå°„åº“ (åŠ¨æ€æ‰§è¡Œ)"],
		"MethodBase\\.Invoke": [RiskLevel.WARNING, "åŠ¨æ€è°ƒç”¨æœªçŸ¥å‡½æ•°"],
		"Activator\\.CreateInstance": [RiskLevel.WARNING, "åŠ¨æ€åˆ›å»ºå¯¹è±¡"],
		"Assembly\\.Load": [RiskLevel.DANGER, "å†…å­˜åŠ è½½äºŒè¿›åˆ¶ä»£ç  (Payload)"],
		"Type\\.GetType": [RiskLevel.WARNING, "åŠ¨æ€èŽ·å–ç±»åž‹ (å¯èƒ½ç”¨äºŽéšè—ç›®æ ‡)"]
	},

	# ðŸ†” æ•æ„Ÿä¿¡æ¯
	"Privacy": {
		"SteamId": [RiskLevel.WARNING, "è¯»å– SteamID"],
		"CSteamID": [RiskLevel.WARNING, "Steam èº«ä»½ç»“æž„"],
		"session": [RiskLevel.WARNING, "åŒ…å« 'session' å…³é”®è¯"],
		"wallet": [RiskLevel.DANGER, "åŒ…å«é’±åŒ…/æ”¯ä»˜å…³é”®è¯"]
	}
}

# === 3. æ„å›¾æŽ¨ç†è§„åˆ™åº“ (Context Engine) ===
var intent_rules = {
	"Discord_Steal": {
		"cat_req": "Network",
		"evidence": ["discord.com/api/webhooks", "discordapp.com/api/webhooks"],
		"desc": "ðŸ”´ [æ„å›¾åˆ†æž] ç–‘ä¼¼æ•°æ®å¤–ä¼ : å‘çŽ° Discord Webhook é“¾æŽ¥"
	},
	"Local_Server": {
		"cat_req": "Network",
		"evidence": ["127.0.0.1", "localhost", "0.0.0.0"],
		"desc": "ðŸŸ¢ [æ„å›¾åˆ†æž] æœ¬åœ°è”æœº: å‘çŽ°æœ¬åœ°æœåŠ¡å™¨å›žçŽ¯åœ°å€"
	},
	"Auto_Update": {
		"cat_req": "Network",
		"evidence": ["github.com", "releases/latest", "raw.githubusercontent"],
		"desc": "ðŸ”µ [æ„å›¾åˆ†æž] è‡ªåŠ¨æ›´æ–°: å‘çŽ° GitHub ä»“åº“å¼•ç”¨"
	},
	"Steam_P2P": {
		"cat_req": "Network",
		"evidence": ["SteamNetworking", "P2P"],
		"desc": "ðŸŸ¢ [æ„å›¾åˆ†æž] Steam è”æœº: ä½¿ç”¨å®˜æ–¹ P2P æŽ¥å£"
	}
}

# ç¼“å­˜æ­£åˆ™
var compiled_rules = {}

func _ready():
	DisplayServer.window_set_title("DMI v1.5 - Universal Audit")
	
	# é¢„ç¼–è¯‘æ­£åˆ™
	for category in permission_rules:
		compiled_rules[category] = {}
		for pattern in permission_rules[category]:
			var regex = RegEx.new()
			regex.compile(pattern)
			compiled_rules[category][pattern] = regex
	
	get_viewport().files_dropped.connect(_on_files_dropped)
	status_label.text = "å°† Mod (.dll) æ‹–å…¥æ­¤å¤„æŸ¥çœ‹æƒé™ä»ªè¡¨ç›˜"

func _on_files_dropped(files):
	if is_scanning: return
	is_scanning = true
	
	# === 1. æ¸…ç©ºæ—§å¡ç‰‡ ===
	for child in result_list.get_children():
		child.queue_free()
	
	var all_files = []
	status_label.text = "æ­£åœ¨è§£æžæ–‡ä»¶åˆ—è¡¨..."
	await get_tree().process_frame
	
	# æ”¶é›†æ–‡ä»¶
	for path in files:
		if DirAccess.dir_exists_absolute(path):
			all_files.append_array(get_all_files(path, ["dll"]))
		elif path.get_extension().to_lower() == "dll":
			all_files.append(path)
			
	if all_files.size() == 0:
		status_label.text = "âŒ æœªæ‰¾åˆ° .dll æ–‡ä»¶ (ä»…æ”¯æŒ C# Mod)"
		is_scanning = false
		return
		
	# å¼€å§‹æ‰«æ
	var total_scanned = 0
	
	for file_path in all_files:
		total_scanned += 1
		status_label.text = "æ­£åœ¨å®¡è®¡: %d / %d" % [total_scanned, all_files.size()]
		
		# æ¯5ä¸ªæ–‡ä»¶æš‚åœä¸€å¸§ï¼Œé˜²æ­¢UIå¡é¡¿
		if total_scanned % 5 == 0: await get_tree().process_frame
		
		# === 2. æ ¸å¿ƒæ‰«æ (èŽ·å–æ•°æ®) ===
		var report = await scan_single_file(file_path)
		
		# === 3. ç”Ÿæˆ UI å¡ç‰‡ (Card) ===
		var card = card_scene.instantiate()
		result_list.add_child(card)
		card.setup(report) # å°†æ•°æ®æ³¨å…¥å¡ç‰‡
			
	status_label.text = "å®¡è®¡å®Œæˆ (å…± %d ä¸ªæ–‡ä»¶)" % total_scanned
	is_scanning = false

# === æ ¸å¿ƒæ‰«æå¼•æ“Ž (è¿”å›žç»“æž„åŒ–æ•°æ®) ===
func scan_single_file(path: String) -> Dictionary:
	var file_obj = FileAccess.open(path, FileAccess.READ)
	# å¦‚æžœæ‰“å¼€å¤±è´¥ï¼Œè¿”å›žç©ºæŠ¥å‘Š
	if not file_obj: 
		return {"filename": path.get_file(), "permissions": {}, "intents": [], "entropy": 0, "is_obfuscated": false}
	
	var file_len = file_obj.get_length()
	if file_len > MAX_FILE_SIZE:
		return {"filename": path.get_file() + " (è¿‡å¤§)", "permissions": {}, "intents": ["âš ï¸ æ–‡ä»¶è¿‡å¤§è·³è¿‡æ‰«æ"], "entropy": 0, "is_obfuscated": false}

	# 1. å¼‚æ­¥æ¸…æ´—ä¸Žåˆ†æž
	var content_bytes = file_obj.get_buffer(file_len)
	var analysis = await extract_readable_text_async(content_bytes)
	var content = analysis["text"]
	var entropy = analysis["entropy"]
	
	# 2. åˆå§‹åŒ–æŠ¥å‘Šå¯¹è±¡
	var report = {
		"filename": path.get_file(),
		"entropy": entropy,
		"is_obfuscated": false,
		"permissions": {}, # ç»“æž„: {"Network": [items], ...}
		"intents": []
	}
	
	# 3. æ··æ·†åˆ¤å®š (Entropy Check)
	if entropy > 7.2: report["is_obfuscated"] = true
	
	# 4. æƒé™æ‰«æ (Permission Scan)
	for category in compiled_rules:
		report["permissions"][category] = []
		var rules = compiled_rules[category]
		
		for pattern in rules:
			var regex = rules[pattern]
			if regex.search(content):
				var raw_rule = permission_rules[category][pattern]
				report["permissions"][category].append({
					"keyword": pattern,
					"level": raw_rule[0],
					"desc": raw_rule[1]
				})

	# 5. æ„å›¾æŽ¨ç† (Intent Engine)
	for intent_name in intent_rules:
		var rule = intent_rules[intent_name]
		var required_cat = rule["cat_req"]
		
		if report["permissions"].has(required_cat) and report["permissions"][required_cat].size() > 0:
			for ev in rule["evidence"]:
				if ev in content:
					report["intents"].append(rule["desc"])
					break 

	return report

# === âš¡ å¼‚æ­¥æ¸…æ´—å¼•æ“Ž (å«é¦™å†œç†µè®¡ç®—) ===
func extract_readable_text_async(bytes: PackedByteArray) -> Dictionary:
	var size = bytes.size()
	var chunk_size = 100000 
	var byte_counts = PackedInt64Array()
	byte_counts.resize(256)
	byte_counts.fill(0)
	
	for i in range(size):
		var b = bytes[i]
		byte_counts[b] += 1 # ç»Ÿè®¡ç†µ
		
		if (b < 32 and b != 10 and b != 13) or b > 126:
			bytes[i] = 32 # æ¸…æ´—ä¸º Space
		
		if i % chunk_size == 0 and i > 0:
			await get_tree().process_frame
			
	# è®¡ç®—ç†µ
	var entropy = 0.0
	var total_float = float(size)
	if total_float > 0:
		for count in byte_counts:
			if count > 0:
				var p = float(count) / total_float
				entropy -= p * (log(p) / log(2))
				
	return {"text": bytes.get_string_from_ascii(), "entropy": entropy}

# === è¾…åŠ©å·¥å…· ===
func get_all_files(path: String, extensions: Array) -> Array:
	var files = []
	var dir = DirAccess.open(path)
	if dir:
		dir.list_dir_begin()
		var file_name = dir.get_next()
		while file_name != "":
			if dir.current_is_dir():
				if file_name != "." and file_name != "..":
					files.append_array(get_all_files(path + "/" + file_name, extensions))
			else:
				if file_name.get_extension().to_lower() in extensions:
					files.append(path + "/" + file_name)
			file_name = dir.get_next()
	return files
